# ondapile

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  ONDAPILE-HANDOFF.md  README.md  docker-compose.yml  drizzle.config.ts  go.mod  go.sum  package.json  tsconfig.json  unified-api-spec.md  vitest.config.ts
docs/: AGENT_RULES.md  COMPLETE_EVALS.md  DEV_METHODOLOGY.md  EVALS.md  FRONTEND_EVALS.md  META_PLAN.md  MIGRATION_EVALS.md  MIGRATION_PLAN.md  PRD.md  PROJECT_SPEC.md  SCENARIO_EVALS.md  nylas-vs-unipile-comparison.md  python-usage-guide.md  session-based-messaging.md  unipile-feature-inventory.md  user-flows.md
docs/actors/: ACTORS.md
docs/architecture/: index.md
internal/adapter/: adapter.go  registry.go
internal/api/: accounts.go  apikey_middleware.go  attendees.go  audit_log.go  calendars.go  chats.go  dual_auth_middleware.go  emails.go  errors.go  health.go  hosted_auth.go  messages.go  metrics.go  middleware.go  oauth_callback.go  router.go  search.go  webhooks.go
internal/config/: config.go  crypto.go
internal/crypto/: message_encryption.go
internal/email/: adapter.go  imap_client.go  smtp_client.go  store.go
internal/gcal/: adapter.go  client.go  normalize.go
internal/gmail/: adapter.go  client.go  normalize.go
migrations/: 001_create_accounts.sql  002_create_chats.sql  003_create_messages.sql  004_create_webhooks.sql  005_create_attendees_and_emails.sql  006_oauth_tokens.sql  007_create_calendars.sql  008_add_pgvector.sql  009_add_message_encryption.sql  010_add_organization_id.sql  011_create_audit_log.sql
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_client.py
(+329 files in other folders)
